# skypro_coursework_3

./: .gitignore  README.md  pyproject.toml
test/: test_transction.py
utils/: funcs.py  main.py
