[tool.poetry]
name = "coursework-3"
version = "0.1.0"
description = ""
authors = ["mikhail <mikhail5861@gmail.com>"]
readme = "README.md"
packages = [{include = "coursework_3"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.2"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
